syntax = "proto3";

package nav;

option go_package = "github.com/yb2020/odoc/proto/gen/go/nav";

import "definitions/validate/Validate.proto";


// 学术网站
message Website {
    string id = 1;
    string userId = 2; // 用户ID
    WebsiteSource source = 3; // 来源 1:系统 2:用户
    string iconUrl = 4; // 网站图标URL
    string name = 5; // 网站名称
    string url = 6; // 网站URL
    WebsiteOpenType openType = 7; // 打开方式 1: 新窗口打开, 2: 当前窗口打开
    int32 sortOrder = 8; // 排序
}

// 网站来源
enum WebsiteSource {
    WebsiteSource_Unknown = 0; // 未知
    WebsiteSource_System = 1; // 系统
    WebsiteSource_User = 2; // 用户
}

// 网站打开方式
enum WebsiteOpenType {
    WebsiteOpenType_Unknown = 0; // 未知
    WebsiteOpenType_NewTab = 1; // 新标签页
    WebsiteOpenType_CurrentTab = 2; // 当前标签页
}
    
// @api_path: /api/nav/website/create
// @method: POST
// @summary: 创建用户学术网站
message CreateWebsiteRequest {
    string iconUrl = 1; // 网站图标URL
    string name = 2 [(validate.rules).string = { min_len: 1 }]; // 网站名称
    string url = 3 [(validate.rules).string = { min_len: 1 }]; // 网站URL
    WebsiteOpenType openType = 4 [(validate.rules).enum = { defined_only: true }]; // 打开方式 1: 新窗口打开, 2: 当前窗口打开
}

message CreateWebsiteResponse {
    string id = 1; // 网站ID
}

// @api_path: /api/nav/website/delete
// @method: POST
// @summary: 删除用户学术网站
message DeleteWebsiteRequest {
    string id = 1; // 网站ID
}

// @api_path: /api/nav/website/getById
// @method: GET
// @summary: 根据ID获取用户学术网站
message GetWebsiteByIdRequest {
    string id = 1; // 网站ID
}

message GetWebsiteByIdResponse {
    Website website = 1; // 网站
}

// @api_path: /api/nav/website/update
// @method: POST
// @summary: 更新用户学术网站
message UpdateWebsiteRequest {
    string id = 1; // 网站ID
    string iconUrl = 2; // 网站图标URL
    string name = 3 [(validate.rules).string = { min_len: 1 }]; // 网站名称
    string url = 4 [(validate.rules).string = { min_len: 1 }]; // 网站URL
    WebsiteOpenType openType = 5 [(validate.rules).enum = { defined_only: true }]; // 打开方式 1: 新窗口打开, 2: 当前窗口打开
}

message UpdateWebsiteResponse {
    string id = 1; // 网站ID
}

// @api_path: /api/nav/website/getList
// @method: GET
// @summary: 获取用户学术网站列表
message GetWebsiteListRequest {
}

message GetWebsiteListResponse {
    repeated Website websites = 1; // 网站列表
}


// @api_path: /api/nav/website/reorder
// @method: POST
// @summary: 更新用户学术网站排序
message ReorderWebsitesRequest {
    string id = 1;     // 被移动的网站ID
    string prevId = 2; // 目标位置的前一个网站ID。如果移动到列表首位，此字段应为空。
    string nextId = 3; // 目标位置的后一个网站ID。如果移动到列表末尾，此字段应为空。
}

// ReorderWebsites 响应
message ReorderWebsitesResponse {
    bool rebalanced = 1; // 一个布尔值，告知客户端是否发生了重排 (rebalance) 操作。
    repeated WebsiteSortUpdate updates = 2; // 一个列表，包含了本次操作中所有被更新了 SortOrder 的网站信息。
}

// 单个网站排序更新的信息
message WebsiteSortUpdate {
    string id = 1; // 网站的 ID
    int32 sortOrder = 2; // 网站更新后的新 SortOrder 值
}
    